--- a/wp-content/themes/durian_enterprise/style.css
+++ b/wp-content/themes/durian_enterprise/style.css
@@ -7,3 +7,135 @@
 body{
   padding-bottom: 20px;
 }
+
+.current-menu-item > a{
+  background: #000;
+}
+
+@media (min-width:768px) {
+  .sub-menu {
+    display: none;
+    position: absolute;
+    background: #222;
+    padding: 10px 10px;
+    width: 100%;
+  }
+
+  li:hover .sub-menu {
+    display: block;
+  }
+
+}
+
+.sub-menu li {
+  margin-bottom: 10px;
+  list-style: none;
+}
+
+.sub-menu li:last-child {
+  margin-bottom: 0;
+}
+
+.sub-menu a  {
+  color: #999;
+  text-decoration: none;
+}
+
+.sub-menu a:hover  {
+  color: #fff;
+}
+
+.current-menu-item > a, .current-menu-parent > a {
+  background: #000;
+}
+.current-menu-parent li a {
+  background: inherit;
+}
+.current-menu-parent .current-menu-item a {
+  color: #fff;
+  font-weight: bold;
+}
+
+.sidebar {
+  margin-top: 40px;
+  color: #444;
+}
+
+.sidebar h3 {
+  color: #888;
+}
+
+.widget {
+  margin: 10px 0 30px;
+}
+
+article.post {
+  margin: 20px 0 40px;
+}
+
+.featured-image img,
+.portfolio-piece img,
+.portfolio-image img {
+  max-width: 100%;
+}
+
+.prev-next {
+  font-size: 24px;
+  margin-top: 30px;
+  text-align: right;
+}
+
+@media (max-width:540px) {
+  .portfolio-piece h4 {
+    font-size: .8em;
+  }
+  .prev-next {
+    margin-top: 15px;
+    font-size: 18px;
+  }
+}
+
+/*
+ * Off Canvas
+ * --------------------------------------------------
+ */
+@media screen and (max-width: 767px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all .25s ease-out;
+       -moz-transition: all .25s ease-out;
+            transition: all .25s ease-out;
+  }
+
+  .row-offcanvas-right {
+    right: 0;
+  }
+
+  .row-offcanvas-left {
+    left: 0;
+  }
+
+  .row-offcanvas-right
+  .sidebar-offcanvas {
+    right: -50%; /* 6 columns */
+  }
+
+  .row-offcanvas-left
+  .sidebar-offcanvas {
+    left: -50%; /* 6 columns */
+  }
+
+  .row-offcanvas-right.active {
+    right: 50%; /* 6 columns */
+  }
+
+  .row-offcanvas-left.active {
+    left: 50%; /* 6 columns */
+  }
+
+  .sidebar-offcanvas {
+    position: absolute;
+    top: 0;
+    width: 50%; /* 6 columns */
+  }
+}
